--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,5 @@
 #root {
-  max-width: 67rem;
+  max-width: 70rem;
   margin-left: auto;
   margin-right: auto;
   display: flex;
@@ -113,6 +113,47 @@ header span {
 header h1 {
   font-weight: 500;
   font-size: 1.6rem;
+}
+
+.project {
+  display: grid;
+  grid-template-columns: 1fr 1.2fr;
+  border-bottom: 1px solid #cccccc;
+  gap: 2rem;
+  padding: 2rem 0;
+}
+.project .project__header {
+  font-weight: 500;
+  text-transform: uppercase;
+  font-size: 1.4rem;
+}
+.project .project__header span {
+  display: block;
+}
+.project .project__header .project__header__id {
+  color: #cccccc;
+  font-size: 2rem;
+}
+.project .project__header .project__header__slash-one {
+  color: #d0605c;
+}
+.project .project__header .project__header__slash-two {
+  color: #70c4cb;
+}
+.project .project__about {
+  margin-top: 2rem;
+}
+.project .project__image {
+  width: 100%;
+  padding-top: 75%;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+.project .project__links {
+  margin-top: 2rem;
+  display: flex;
+  justify-content: space-around;
 }
 
 /*# sourceMappingURL=style.css.map */
