--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -7,3 +7,5 @@
 @import "components/navigation";
 @import "components/header";
 @import "components/project";
+@import "components/form";
+@import "components/about";
