--- a/src/style.css
+++ b/src/style.css
@@ -9,11 +9,33 @@ body {
   font-family: "Barlow", sans-serif;
   color: #4a494a;
   background-color: #f5f5f5;
+  overflow-y: scroll;
 }
 
 .page {
   width: 100%;
   padding: 3rem;
+  margin-left: 270px;
+}
+@media (max-width: 62.5em) {
+  .page {
+    margin-left: 0;
+  }
+}
+
+input,
+textarea {
+  font-size: 1.1rem;
+  background-color: #f5f5f5;
+  padding: 0.4rem;
+  border: 1px solid #cccccc;
+  color: inherit;
+  font-family: inherit;
+}
+input:focus,
+textarea:focus {
+  outline: 3px solid #70c4cb;
+  border-radius: 3px;
 }
 
 * {
@@ -42,6 +64,12 @@ a {
   padding: 3rem;
   height: 100vh;
   border-right: 1px solid #cccccc;
+  position: fixed;
+}
+@media (max-width: 62.5em) {
+  .navigation {
+    display: none;
+  }
 }
 .navigation .navigation__logo {
   border-top: 1px solid #cccccc;
@@ -106,13 +134,14 @@ header {
   padding: 1rem 0 0 0;
   border-top: 1px solid #cccccc;
   border-bottom: 1px solid #cccccc;
-}
-header span {
-  color: #70c4cb;
+  position: relative;
 }
 header h1 {
   font-weight: 500;
   font-size: 1.6rem;
+}
+header h1 span {
+  color: #70c4cb;
 }
 
 .project {
@@ -121,6 +150,7 @@ header h1 {
   border-bottom: 1px solid #cccccc;
   gap: 2rem;
   padding: 2rem 0;
+  align-items: center;
 }
 .project .project__header {
   font-weight: 500;
@@ -154,6 +184,78 @@ header h1 {
   margin-top: 2rem;
   display: flex;
   justify-content: space-around;
+}
+.project .project__link:hover {
+  border-bottom: 1px solid #4a494a;
+}
+
+.contact-form {
+  display: flex;
+  flex-direction: column;
+  padding: 2rem 0;
+  border-bottom: 1px solid #cccccc;
+}
+.contact-form label {
+  margin-bottom: 0.4rem;
+}
+.contact-form .contact-form__textarea {
+  height: 10rem;
+  resize: none;
+  margin-bottom: 1rem;
+}
+.contact-form .contact-form__input {
+  margin-bottom: 1rem;
+}
+.contact-form .contact-form__button {
+  align-self: flex-start;
+  padding: 0.8rem 2.6rem;
+  font-weight: 500;
+  text-transform: uppercase;
+  font-size: 1rem;
+  letter-spacing: 1px;
+  background-color: #4a494a;
+  color: #f5f5f5;
+}
+.contact-form .contact-form__button:focus {
+  outline: 3px solid #70c4cb;
+  border-radius: 3px;
+}
+.contact-form .contact-form__button:hover {
+  cursor: pointer;
+  opacity: 0.8;
+}
+
+.about {
+  padding: 2rem 0;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 2rem;
+  border-bottom: 1px solid #cccccc;
+  align-items: center;
+}
+.about p {
+  margin-bottom: 1rem;
+}
+.about .about__image {
+  background-image: url("./images/IMG_3946.jpg");
+  padding-top: 100%;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+.about .about__technologies {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+.about .about__technologies ul {
+  margin-top: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+.about .about__technologies ul li {
+  text-transform: uppercase;
+  font-weight: 500;
 }
 
 /*# sourceMappingURL=style.css.map */
