--- a/src/style.css
+++ b/src/style.css
@@ -60,16 +60,30 @@ a {
   font-family: inherit;
 }
 
-.navigation {
+@media (max-width: 62.5em) {
+  .navigation {
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.76);
+    position: fixed;
+    z-index: 100;
+    opacity: 0;
+    visibility: hidden;
+  }
+  .navigation .navigation__wrapper {
+    right: 0;
+    transform: translateX(100%);
+  }
+  .navigation .navigation__logo {
+    margin-top: 4rem;
+  }
+}
+.navigation .navigation__wrapper {
   padding: 3rem;
   height: 100vh;
   border-right: 1px solid #cccccc;
   position: fixed;
-}
-@media (max-width: 62.5em) {
-  .navigation {
-    display: none;
-  }
+  background-color: #f5f5f5;
 }
 .navigation .navigation__logo {
   border-top: 1px solid #cccccc;
@@ -104,7 +118,7 @@ a {
 .navigation .navigation__socials .navigation__socials__link {
   padding: 0.4rem;
   background-color: #4a494a;
-  margin-top: 0.4rem;
+  margin-top: 0.6rem;
   display: flex;
   border-radius: 3px;
   position: relative;
@@ -128,6 +142,18 @@ a {
   color: #f5f5f5;
   z-index: 1;
 }
+.navigation .navigation__close-mobile {
+  position: absolute;
+  top: 3.6rem;
+  right: 3rem;
+  background-color: #f5f5f5;
+}
+.navigation .navigation__close-mobile .navigation__close-mobile__icon {
+  font-size: 2.2rem;
+  color: #4a494a;
+  background-color: #f5f5f5;
+  display: none;
+}
 
 header {
   height: 14rem;
@@ -142,6 +168,34 @@ header h1 {
 }
 header h1 span {
   color: #70c4cb;
+}
+header .open-mobile {
+  position: absolute;
+  top: 1rem;
+  right: -0.5rem;
+  background-color: #f5f5f5;
+  padding: 0.5rem;
+  cursor: pointer;
+  display: none;
+}
+header .open-mobile span {
+  width: 2.2rem;
+  height: 3px;
+  background-color: #4a494a;
+  display: block;
+  margin-bottom: 8px;
+  margin-left: auto;
+}
+header .open-mobile span:nth-child(1) {
+  width: 1.7rem;
+}
+header .open-mobile span:nth-child(3) {
+  width: 1.2rem;
+}
+@media (max-width: 62.5em) {
+  header .open-mobile {
+    display: block;
+  }
 }
 
 .project {
