media queries and more styling

--- a/src/sass/abstract/_variables.scss
+++ b/src/sass/abstract/_variables.scss
@@ -9,5 +9,6 @@ $red: #d0605c;
 $header-height: 14rem;
 $header-padding: 1rem 0 0 0;
 
-// .page (in file "_general.scss") and .navigation use this value
+// .page (in file "_general.scss") and .navigation use these values
 $page-padding: 3rem;
+$page-padding__mobile: 3rem 1.6rem;
