--- a/src/sass/components/_about.scss
+++ b/src/sass/components/_about.scss
@@ -1,31 +1,60 @@
 .about {
-  padding: 2rem 0;
+  padding: 4rem 0;
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr 1.1fr;
   gap: 2rem;
   border-bottom: 1px solid $grey--border;
   align-items: center;
-  & p {
+  & .about__text {
     margin-bottom: 1rem;
+    font-size: 1.1rem;
   }
-  & .about__image {
-    background-image: url("./images/jake.jpg");
-    padding-top: 120%;
-    background-position: (50% 50%);
-    background-size: cover;
-    background-repeat: no-repeat;
-  }
+
   & .about__technologies {
     display: grid;
     grid-template-columns: 1fr 1fr;
     & ul {
+      list-style-type: disc;
       margin-top: 1rem;
       display: flex;
       flex-direction: column;
       gap: 1rem;
       & li {
+        margin-left: 1.2rem;
         text-transform: uppercase;
         font-weight: 500;
+      }
+    }
+  }
+  .about__graphic {
+    position: relative;
+    background-color: $grey--bg;
+    padding: 0.4rem;
+    border-radius: 50%;
+    border: 4px solid $blue;
+    & .about__graphic__image {
+      background-image: url("./images/jake.jpg");
+      padding-top: 100%;
+      border-radius: 50%;
+      background-position: (50% 50%);
+      background-size: cover;
+      background-repeat: no-repeat;
+    }
+    & .about__graphic__background {
+      & span {
+        position: absolute;
+        top: -15rem;
+        font-size: 40rem;
+        font-weight: 400;
+        z-index: -1;
+      }
+      & span:nth-child(1) {
+        right: -3rem;
+        color: $blue;
+      }
+      & span:nth-child(2) {
+        right: 1rem;
+        color: $blue;
       }
     }
   }
