--- a/src/style.css
+++ b/src/style.css
@@ -251,14 +251,15 @@ header .open-mobile span:nth-child(3) {
 }
 .project .project__about {
   margin-top: 2rem;
+  font-size: 1.1rem;
 }
 .project .project__features {
   list-style-type: disc;
-  margin-top: 1rem;
+  margin-top: 2rem;
 }
 .project .project__features li {
   margin-left: 1.2rem;
-  margin-top: 1rem;
+  margin-top: 0.8rem;
 }
 .project .project__features__header {
   text-transform: uppercase;
@@ -272,9 +273,15 @@ header .open-mobile span:nth-child(3) {
   background-repeat: no-repeat;
 }
 .project .project__links {
-  margin-top: 2rem;
+  margin-top: 1.4rem;
   display: flex;
   justify-content: space-around;
+}
+.project .project__link {
+  padding: 0.25rem;
+  font-size: 1.1rem;
+  border-bottom: 1px solid #f5f5f5;
+  transition: 0.2s ease-in-out;
 }
 .project .project__link:hover {
   border-bottom: 1px solid #4a494a;
@@ -321,36 +328,62 @@ header .open-mobile span:nth-child(3) {
 }
 
 .about {
-  padding: 2rem 0;
+  padding: 4rem 0;
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr 1.1fr;
   gap: 2rem;
   border-bottom: 1px solid #cccccc;
   align-items: center;
 }
-.about p {
+.about .about__text {
   margin-bottom: 1rem;
-}
-.about .about__image {
-  background-image: url("./images/jake.jpg");
-  padding-top: 120%;
-  background-position: 50% 50%;
-  background-size: cover;
-  background-repeat: no-repeat;
+  font-size: 1.1rem;
 }
 .about .about__technologies {
   display: grid;
   grid-template-columns: 1fr 1fr;
 }
 .about .about__technologies ul {
+  list-style-type: disc;
   margin-top: 1rem;
   display: flex;
   flex-direction: column;
   gap: 1rem;
 }
 .about .about__technologies ul li {
+  margin-left: 1.2rem;
   text-transform: uppercase;
   font-weight: 500;
+}
+.about .about__graphic {
+  position: relative;
+  background-color: #f5f5f5;
+  padding: 0.4rem;
+  border-radius: 50%;
+  border: 4px solid #70c4cb;
+}
+.about .about__graphic .about__graphic__image {
+  background-image: url("./images/jake.jpg");
+  padding-top: 100%;
+  border-radius: 50%;
+  background-position: 50% 50%;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+.about .about__graphic .about__graphic__background span {
+  position: absolute;
+  top: -15rem;
+  font-size: 40rem;
+  font-weight: 400;
+  z-index: -1;
+}
+.about .about__graphic .about__graphic__background span:nth-child(1) {
+  right: -3rem;
+  color: #70c4cb;
+}
+.about .about__graphic .about__graphic__background span:nth-child(2) {
+  right: 1rem;
+  color: #70c4cb;
 }
 @media (max-width: 37.5em) {
   .about {
