remove unnecessary class names

--- a/src/sass/components/_about.scss
+++ b/src/sass/components/_about.scss
@@ -5,9 +5,11 @@
   gap: 2rem;
   border-bottom: 1px solid $grey--border;
   align-items: center;
-  & .about__text {
-    margin-bottom: 1rem;
-    font-size: 1.1rem;
+  & .about__info {
+    & p {
+      font-size: 1.1rem;
+      margin-bottom: 1rem;
+    }
   }
 
   & .about__technologies {
@@ -26,36 +28,19 @@
       }
     }
   }
-  .about__graphic {
+  .about__image-container {
     position: relative;
     background-color: $grey--bg;
     padding: 0.4rem;
     border-radius: 50%;
-    border: 4px solid $blue;
-    & .about__graphic__image {
+    border: 6px solid $blue;
+    & .about__image {
       background-image: url("./images/jake.jpg");
       padding-top: 100%;
       border-radius: 50%;
       background-position: (50% 50%);
       background-size: cover;
       background-repeat: no-repeat;
-    }
-    & .about__graphic__background {
-      & span {
-        position: absolute;
-        top: -15rem;
-        font-size: 40rem;
-        font-weight: 400;
-        z-index: -1;
-      }
-      & span:nth-child(1) {
-        right: -3rem;
-        color: $blue;
-      }
-      & span:nth-child(2) {
-        right: 1rem;
-        color: $blue;
-      }
     }
   }
   @include max-600 {
