--- a/src/style.css
+++ b/src/style.css
@@ -335,9 +335,9 @@ header .open-mobile span:nth-child(3) {
   border-bottom: 1px solid #cccccc;
   align-items: center;
 }
-.about .about__text {
-  margin-bottom: 1rem;
+.about .about__info p {
   font-size: 1.1rem;
+  margin-bottom: 1rem;
 }
 .about .about__technologies {
   display: grid;
@@ -355,35 +355,20 @@ header .open-mobile span:nth-child(3) {
   text-transform: uppercase;
   font-weight: 500;
 }
-.about .about__graphic {
+.about .about__image-container {
   position: relative;
   background-color: #f5f5f5;
   padding: 0.4rem;
   border-radius: 50%;
-  border: 4px solid #70c4cb;
+  border: 6px solid #70c4cb;
 }
-.about .about__graphic .about__graphic__image {
+.about .about__image-container .about__image {
   background-image: url("./images/jake.jpg");
   padding-top: 100%;
   border-radius: 50%;
   background-position: 50% 50%;
   background-size: cover;
   background-repeat: no-repeat;
-}
-.about .about__graphic .about__graphic__background span {
-  position: absolute;
-  top: -15rem;
-  font-size: 40rem;
-  font-weight: 400;
-  z-index: -1;
-}
-.about .about__graphic .about__graphic__background span:nth-child(1) {
-  right: -3rem;
-  color: #70c4cb;
-}
-.about .about__graphic .about__graphic__background span:nth-child(2) {
-  right: 1rem;
-  color: #70c4cb;
 }
 @media (max-width: 37.5em) {
   .about {
