thank you page after form submission!!

--- a/src/sass/components/_about.scss
+++ b/src/sass/components/_about.scss
@@ -35,7 +35,7 @@
     border-radius: 50%;
     border: 6px solid $blue;
     & .about__image {
-      background-image: url("./images/jake.jpg");
+      background-image: url("./images/jake.webp");
       padding-top: 100%;
       border-radius: 50%;
       background-position: (50% 50%);
